--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Cabecera -->
     <header>
         <img src="https://cdn.pixabay.com/photo/2013/04/01/09/18/document-98478_960_720.png" alt="Logo" class="logo">
-        <h1>Mi Página Web</h1>
+        <h1>Página Web David Bejarano</h1>
     </header>
 
     <div class="container">
@@ -27,7 +27,7 @@
 
         <!-- Contenido Principal -->
         <main class="main-content">
-            <h2>Bienvenido a Nuestra Web</h2>
+            <h2>Bienvenido a mi Web</h2>
             <p>
                 Esta es una estructura básica de una página web con una cabecera, un menú lateral y una sección principal de contenido.
             </p>
